fixed img overlapping nav in exp section

--- a/sass/branding.sass
+++ b/sass/branding.sass
@@ -64,9 +64,10 @@ nav
     padding-left: 15px
     width: 100%
     height: 70px
-    position: fixed
+    position: sticky
     top: 0
     overflow: hidden
+    z-index: 10
     /* Navigation Menu */
     ul
         list-style-type: none
@@ -190,10 +191,7 @@ body
                 flex-wrap: wrap
                 justify-content: center
                 align-items: center
-                a
-                    text-decoration: none
-                    margin: 0
-                    padding: 0
+                
                 img
                     border-radius: 100%
                     max-width: 27%
@@ -225,7 +223,6 @@ body
                 img
                     max-width: 15%
                     padding: 30px
-                    height: auto
                     transition: max-width 0.5s
                 img:hover
                     filter: grayscale(0%)
